Incorporate pull request feedback

--- a/app/views/grants/_form.html.haml
+++ b/app/views/grants/_form.html.haml
@@ -17,7 +17,7 @@
   .cell
     = f.label :rfa, 'RFA'
     = f.hidden_field :rfa, id: :grant_rfa
-    %trix-editor(input='grant_rfa'), id: 'test'
+    %trix-editor(input='grant_rfa')
 
 %h3
   Dates
