--- a/app/views/grants/duplicate/new.html.haml
+++ b/app/views/grants/duplicate/new.html.haml
@@ -1,10 +1,11 @@
 - content_for(:page_title, 'Duplicate Grant')
 %h1
-  Make a new grant based on
+  Create a grant based on
   = @grant.name
 
 %p
   Once you update and save, it will copy all questions and roles from
   = link_to "#{@grant.name}", grant_path(params[:grant_id])
 
-=# form_with model: @grant do |f|
+= form_with model: @grant, url: grant_duplicate_path, local: true do |f|
+  = render 'grants/form', f: f, grant: @grant
