--- a/app/views/grants/submissions/show.html.haml
+++ b/app/views/grants/submissions/show.html.haml
@@ -16,7 +16,7 @@
     %tbody
       - @submission.grant.questions.each do |question|
         %tr
-          %td= question.name
+          %td= question.text
           %td= 'Replace with Responses'
 
 = link_to 'Back', grant_submissions_path(@grant)
