submissions cleanup and WIP

--- a/app/views/grants/submissions/_form.html.haml
+++ b/app/views/grants/submissions/_form.html.haml
@@ -14,6 +14,6 @@
 
 .grid-x
   .actions
-    = f.submit 'Save and Complete', class: 'button'
+    = f.submit 'Save and Submit', class: 'button'
     = f.submit 'Save as Draft', class: 'button warning', name: 'draft', confirm: 'Drafts will not be considered for funding'
     = link_to 'Cancel', grant_submissions_path, class: 'button secondary'
