--- a/app/views/shared/_grant_edit_tabbed_menu.html.haml
+++ b/app/views/shared/_grant_edit_tabbed_menu.html.haml
@@ -1,9 +1,17 @@
 %h1
-  Editing
-  = @grant.name
+  Editing:
+  = grant.name
 
-%ul.tabs#grant-info{ class: "grant-edit grant-#{@grant.id}-edit" }
-  - {'Overview' => edit_grant_path(@grant), 'Questions' => grant_questions_path(@grant), 'Permissions' => grant_grant_users_path(@grant), 'Duplicate' => new_grant_duplicate_path(@grant) }.each do |tab, path|
+= @role
+
+#grant-state
+  %strong
+    Current Publish Status:
+  = grant.state.capitalize
+  = render 'grants/state/form', { grant: grant } unless @current_user_role == 'viewer'
+
+%ul.tabs#grant-info{ class: "grant-edit grant-#{grant.id}-edit" }
+  - {'Overview' => edit_grant_path(grant), 'Questions' => grant_questions_path(grant), 'Permissions' => grant_grant_users_path(grant), 'Duplicate' => new_grant_duplicate_path(grant) }.each do |tab, path|
     %li.tabs-title{ class: [request.path.include?(path) && 'is-active'] }
       = link_to tab, path
 
