--- a/app/views/grants/edit.html.haml
+++ b/app/views/grants/edit.html.haml
@@ -1,7 +1,6 @@
 - content_for(:page_title, "Edit - #{@grant.name}")
 
-= render 'shared/grant_edit_tabbed_menu'
-
+= render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 .tabs-panel.is-active
   = form_with model: @grant, local: true, id: 'grant-edit' do |f|
     = render 'form', f: f, grant: @grant
