--- a/app/views/grants/grant_users/index.html.haml
+++ b/app/views/grants/grant_users/index.html.haml
@@ -1,7 +1,6 @@
 - content_for(:page_title, "Edit - #{@grant.name}")
 
-= render 'shared/grant_edit_tabbed_menu'
-
+= render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 .tabs-panel.is-active
   %h2
     Permissions
