--- a/app/views/grants/questions/edit.html.haml
+++ b/app/views/grants/questions/edit.html.haml
@@ -1,7 +1,6 @@
 - content_for(:page_title, "Editing: #{@question.text}")
 
-= render 'shared/grant_edit_tabbed_menu'
-
+= render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 .tabs-panel.is-active
   %h2
     = "Editing #{@question.text}"
