--- a/app/views/grants/show.html.haml
+++ b/app/views/grants/show.html.haml
@@ -1,9 +1,11 @@
 - content_for(:page_title, "#{@grant.name}")
 
-%h1
-  = @grant.name
-  %small
-    = @grant.organization.name
+.grid-x.grid-margin-x
+  .small-12.cell#title
+    %h1.name{class: @grant.name_length_class}
+      = @grant.name
+      %small
+        = @grant.organization.name
 
 .grid-x.grid-margin-x
   %aside.small-12.medium-3.cell
@@ -24,7 +26,7 @@
             Submission Close Date:
           %dd
             = @grant.submission_close_date
-  %main.small-12.medium-9.cell
+  .small-12.medium-9.cell#rfa
     %h4
       RFA
     = @grant.rfa.html_safe
@@ -32,14 +34,11 @@
     %hr
 
     %ul.menu.simple#user-links
-      %li
-        = link_to 'Apply', new_grant_submission_path(@grant), class: 'submissions'
+      = @grant.apply_menu_link
       %li
         = link_to 'View All Grants', root_path
 
     %ul.menu.simple#admin-links
-      %li
-        = link_to 'Edit', edit_grant_path(@grant), id: "grant-#{@grant.id}-edit" if policy(@grant).edit?
-      %li
-        = link_to 'View Submissions', grant_submissions_path(@grant), class: 'submissions' if policy(@grant).grant_viewer_access?
+      = @grant.edit_menu_link
+      = @grant.view_submissions_menu_link
 
