--- a/app/views/home/_card.html.haml
+++ b/app/views/home/_card.html.haml
@@ -1,24 +1,21 @@
-.card
+.card{id: "grant_#{grant.id}"}
   .card-section.grant-name
-    %h4
+    %h4.name{class: grant.name_length_class}
       = link_to grant.name, grant_path(grant)
   .card-section.grant-dates
     .dates
       .date
         %strong
-          %small
-            Announced:
-        = grant.publish_date
+          Announced:
+        .publish-date
+          = grant.publish_date
       .date
         %strong
-          %small
-            Submission Period:
-        = grant.submission_open_date
-        \-
-        = grant.submission_close_date
+          Submission Period:
+        .submission-period
+          = grant.submission_period
   .card-divider.grant-links
     %ul.menu
-      %li
-        = link_to 'Learn More', grant_path(grant)
-      %li
-        = link_to 'Apply Now', new_grant_submission_path(grant)
+      = grant.show_menu_link
+      = grant.apply_menu_link
+      = grant.edit_menu_link
