--- a/app/assets/stylesheets/grant_permissions.scss
+++ b/app/assets/stylesheets/grant_permissions.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the GrantUsers controller here.
+// Place all the styles related to the GrantPermissions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
