--- a/app/views/grants/grant_permissions/_edit_form.html.haml
+++ b/app/views/grants/grant_permissions/_edit_form.html.haml
@@ -7,10 +7,10 @@
       = f.label :user, 'User\'s Email: '
       = @user.email
     .grid-x
-      = f.label :grant_role, 'Grant Role'
-      = f.select :grant_role, grant_user_grant_role_select_options
+      = f.label :role, 'Grant Role'
+      = f.select :role, grant_permission_role_select_options
 
 .grid-x
   .actions
     = f.submit 'Update', class: 'button'
-    = link_to 'Cancel', grant_grant_users_path(grant), class: 'button secondary'
+    = link_to 'Cancel', grant_grant_permissions_path(grant), class: 'button secondary'
