--- a/app/views/grants/grant_permissions/edit.html.haml
+++ b/app/views/grants/grant_permissions/edit.html.haml
@@ -3,9 +3,9 @@
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 .tabs-panel.is-active
   %h2
-    = "Edit #{@grant_user.user.name}'s Permission"
+    = "Edit #{@grant_permission.user.name}'s Permission"
 
   .grid-x
     .cell
-      = form_with model: [@grant, @grant_user], local: true do |f|
+      = form_with model: [@grant, @grant_permission], local: true do |f|
         = render 'edit_form', f: f, grant: @grant
