--- a/app/views/grants/grant_permissions/index.html.haml
+++ b/app/views/grants/grant_permissions/index.html.haml
@@ -7,12 +7,12 @@
 
   %p
     - unless @current_user_role == 'viewer'
-      = link_to 'Add new permission', new_grant_grant_user_path
+      = link_to 'Add new permission', new_grant_grant_permission_path
       = ' | '
     = link_to 'View all Grants', grants_path
 
 
-  - unless @grant_users.present?
+  - unless @grant_permissions.present?
     %p
       No roles have been assigned on this grant.
   - else
@@ -26,11 +26,11 @@
           %th
 
       %tbody
-        - @grant_users.each do |grant_user|
+        - @grant_permissions.each do |grant_permission|
           %tr
             %td
-              = grant_user.user.name
+              = grant_permission.user.name
             %td
-              = grant_user.grant_role
+              = grant_permission.role
             %td
-              = render partial: "#{@current_user_role}_links", locals: { grant_user: grant_user, grant: @grant }
+              = render partial: "#{@current_user_role}_links", locals: { grant_permission: grant_permission, grant: @grant }
