--- a/app/views/grants/forms/_question_form.html.erb
+++ b/app/views/grants/forms/_question_form.html.erb
@@ -7,8 +7,8 @@
       <td><!-- Export code --></td>
       <td>Is mandatory</td>
       <td>Response type</td>
-      <td class="form_builder_question_std_answer_set">Standard answer set to use</td>
-    </tr>
+<!--       <td class="form_builder_question_std_answer_set">Standard answer set to use</td>
+ -->    </tr>
 
     <tr>
       <td><%= question.text_area :text, rows: 1 %></td>
