WIP: change Submission namespace to GrantSubmission

--- a/app/views/grants/forms/_form.html.erb
+++ b/app/views/grants/forms/_form.html.erb
@@ -62,7 +62,7 @@
       <%# end %>
 
       <%= form_table_row f, :description do |attr| %>
-        <%= text_area_tag 'submission_form[description]', f.object.description, class: 'field-always-editable', rows: 2, cols: 80 %>
+        <%= text_area_tag 'grant_submission_form[description]', f.object.description, class: 'field-always-editable', rows: 2, cols: 80 %>
       <% end %>
     </table>
     <div class="actions">
