--- a/app/views/grants/submissions/_crud_links.html.erb
+++ b/app/views/grants/submissions/_crud_links.html.erb
@@ -1,2 +1,1 @@
-<%#= link_to view_or_edit(response_set), polymorphic_path([@grant, response_set], action: :edit), class: "button tiny btn-pill #{view_or_edit_class(response_set)}" %>
-Links TK
+<%= link_to view_or_edit(submission), polymorphic_path([@grant, submission], action: :edit), class: "button tiny btn-pill #{view_or_edit_class(submission)}" %>
