--- a/app/views/grants/submissions/edit.html.erb
+++ b/app/views/grants/submissions/edit.html.erb
@@ -1,5 +1,5 @@
 <!-- <div class="link_box">
-  <%#= link_to "Back to List", polymorphic_path([@grant, FormBuilder::ResponseSet], form_builder_survey_id: @response_set.survey.id), :class=>"button small btn-info" %>
+  <%#= link_to "Back to List", polymorphic_path([@grant, FormBuilder::ResponseSet], form_builder_survey_id: @submission.form.id), :class=>"button small btn-info" %>
 </div> -->
 
 <div class="page-header">
