--- a/app/views/grants/show.html.haml
+++ b/app/views/grants/show.html.haml
@@ -9,23 +9,7 @@
 
 .grid-x.grid-margin-x
   %aside.small-12.medium-3.cell
-    .card#grant-dates
-      %h4.card-divider
-        Dates
-      .card-section
-        %dl
-          %dt
-            Publish Date:
-          %dd
-            = @grant.publish_date
-          %dt
-            Submission Open Date:
-          %dd
-            = @grant.submission_open_date
-          %dt.secondary
-            Submission Close Date:
-          %dd
-            = @grant.submission_close_date
+    = render partial: 'dates_card', locals: { grant: @grant }
   .small-12.medium-9.cell#rfa
     %h4
       RFA
