--- a/app/views/grants/submissions/_section_fields.html.erb
+++ b/app/views/grants/submissions/_section_fields.html.erb
@@ -65,6 +65,9 @@
             <% else %>
                 <%= ff.object.formatted_response_value %>
             <% end %>
+            <% if ff.object.question.instruction.present? %>
+              <p class="helper-text">Instruction: <%= ff.object.question.instruction %></p>
+          <% end %>
           </div>
         </td>
       </tr>
