--- a/app/views/grants/forms/_section_form.html.erb
+++ b/app/views/grants/forms/_section_form.html.erb
@@ -1,4 +1,4 @@
-<fieldset class="form_builder_section_fieldset">
+<fieldset class="fieldset form_builder_section_fieldset">
   <legend>Section <%= section.link_to_remove "Delete", class: "button tiny btn-pill warning" if has_edit_permission %></legend>
   <table class="section_table table table-condensed table-striped">
     <%= form_table_row section, :title do |attr| %>
