--- a/app/views/shared/_grant_edit_tabbed_menu.html.haml
+++ b/app/views/shared/_grant_edit_tabbed_menu.html.haml
@@ -10,11 +10,11 @@
   = render 'grants/state/form', { grant: grant } unless @current_user_role == 'viewer'
 
 %ul.tabs#grant-info{ class: "grant-edit grant-#{grant.id}-edit" }
-  - {'View' => grant_path(grant),                                         |
-     'Edit' => edit_grant_path(grant),                                    |
-     'Submission Form' => edit_grant_form_path(grant, grant.form),        |
-     'Permissions' => grant_grant_permissions_path(grant),                |
-     'Submissions' => grant_submissions_path(grant),                      |
+  - {'View' => grant_path(grant),                                                                        |
+     'Edit' => edit_grant_path(grant),                                                                   |
+     'Submission Form' => edit_grant_form_path(grant, grant.grant_forms.first.grant_submission_form_id), |
+     'Permissions' => grant_grant_permissions_path(grant),                                               |
+     'Submissions' => grant_submissions_path(grant),                                                     |
      'Duplicate' => new_grant_duplicate_path(grant) }.each do |tab, path|
     %li.tabs-title{ class: [request.path == path && 'is-active'] }
       = link_to tab, path
