--- a/app/views/grants/forms/_multiple_choice_option_form.html.haml
+++ b/app/views/grants/forms/_multiple_choice_option_form.html.haml
@@ -1,3 +1,3 @@
 %td= multiple_choice_option.text_field :text
 %td= multiple_choice_option.text_field :display_order, size: 3
-%td= multiple_choice_option.link_to_remove "Delete", class: "button clear tiny btn-pill warning"
+%td= multiple_choice_option.link_to_remove 'Delete', class: 'button hollow tiny btn-pill warning'
