--- a/app/views/grants/forms/_question_form.html.erb
+++ b/app/views/grants/forms/_question_form.html.erb
@@ -1,24 +1,24 @@
 <fieldset class="fieldset form_builder_question_fieldset">
-  <legend>Question <%= question.link_to_remove 'Delete', class: 'button tiny btn-pill warning' if has_edit_permission %></legend>
-  <table class="question_table table table-condensed" style="width: auto;">
+  <legend>
+      <span>Question</span>
+      <%= question.link_to_remove 'Delete', class: 'button tiny btn-pill hollow warning' if has_edit_permission %></legend>
+  <table class="question_table table" style="width: auto;">
     <tr>
-      <td>Text</td>
-      <td>Display order</td>
-      <td><!-- Export code --></td>
-      <td>Is mandatory</td>
-      <td>Response type</td>
+      <th><%= question.label :text %></th>
+      <th><%= question.label :display_order %></th>
+      <th><%= question.label :is_mandatory %></th>
+      <th><%= question.label :response_type %></th>
     </tr>
 
     <tr>
       <td><%= question.text_area :text, rows: 1 %></td>
       <td><%= question.text_field :display_order, size: 3 %></td>
-      <td><%# question.text_field :export_code, size: 5 %></td>
       <td><%= question.select :is_mandatory, options_for_select([true, false], question.object.is_mandatory || false), include_blank: true %></td>
       <td><%= question.select :response_type, GrantSubmission::Question::VIEW_RESPONSE_TYPE_TRANSLATION.invert.to_a, { include_blank: true }, class: 'form_builder_question_response_type' %></td>
     </tr>
 
     <tr>
-      <td colspan="8">Instruction</td>
+      <th colspan="8"><%= question.label :instruction %> </td>
     </tr>
     <tr>
       <td colspan="8"><%= question.text_area :instruction, rows: 1, cols: 100 %></td>
@@ -38,7 +38,7 @@
       <td colspan=4>
         Multiple Choice Options
         <% if has_edit_permission %>
-          <%= question.link_to_add "Add", :multiple_choice_options, data: { location: 'parent', target: '.submission_multiple_choice_options_table'}, class: 'button btn-pill small success' %>
+          <%= question.link_to_add 'Add an Option', :multiple_choice_options, data: { location: 'parent', target: '.submission_multiple_choice_options_table'}, class: 'button btn-pill small hollow primary' %>
         <% end %>
       </td>
     </tr>
