--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,6 +8,11 @@
     %h3.subheader.text-align-center
       Current Grants
 .grid-x.grid-padding-x.small-up-1.medium-up-2.large-up-3#public-grants
-  - @grants.each do |grant|
-    .cell
-      = render 'card', grant: grant
+  - if @grants.present?
+    - @grants.each do |grant|
+      .cell
+        = render 'card', grant: grant
+  - else
+    .small-12.text-center
+      %h5
+        There are no open grants available.
