--- a/app/views/grants/submissions/_section_fields.html.erb
+++ b/app/views/grants/submissions/_section_fields.html.erb
@@ -44,6 +44,7 @@
                 <% when :short_text %>
                     <%= ff.text_area ffn, rows: 1, cols: 30, data: { question_id: ff.object.question.id } %>
                 <% when :long_text %>
+                    here
                     <%= ff.text_area ffn, rows: 5, cols: 31, data: { question_id: ff.object.question.id } %>
                 <% when :date_opt_time %>
                     <%= ff.date_opt_time_field :datetime_val, :boolean_val, data: { question_id: ff.object.question.id } %>
@@ -58,11 +59,16 @@
                     %>
                 <% when :file_upload %>
                     <%= ff.file_upload_field(
-                            !ff.object.new_record? && !ff.object.changed? && !ff.object.document_file_name.nil?,
-                            ffn,
-                            :remove_document,
-                            ff.object.formatted_response_value,
-                            (!ff.object.new_record? ? polymorphic_path([@grant_patient, ff.object.submission], action: :download_document, grant_submission_response_id: ff.object.id) : nil)) %>
+                            has_saved_file: ff.object.document.attached?,
+                            # has_saved_file: (ff.object.persisted? && !ff.object.changed? && !ff.object.document.nil?),
+                            # !ff.object.new_record? && !ff.object.changed? && !ff.object.document_file_name.nil?,
+                            file_field: ffn,
+                            remove_document: :remove_document,
+                            document: ff.object.document
+                            # # FormBuilder also defined a link location, but we don't need that
+                            #(!ff.object.new_record? ? edit_grant_submission_path(@grant, ff.object.submission], grant_submission_response_id: ff.object.id) : nil)
+                          )
+                    %>
                 <% end %>
             <% else %>
                 <%= ff.object.formatted_response_value %>
